@@ -9,7 +9,7 @@
             <IMG SRC="wango.jpg" ALT="The world of the wango">
             <A HREF="http://www.cnn.com/">CNN</A>
             <INPUT NAME="boobala" TYPE="TEXT">
-            <INPUT TYPE="submit" SRC="bongo.gif" HEIGHT=142 WIDTH=43>
+            <INPUT TYPE="image" SRC="bongo.gif" HEIGHT=142 WIDTH=43>
             <a href="link.htm"><img src="linked.gif"></a>
         </FORM>
         <A HREF="http://www.bbc.co.uk/" NAME="Wilma">BBC</A>
